build/log/idf_py_stderr_output_69571
Command: make -j 10 all
/Users/kagamirudo/002/main/sdcard.c: In function 'app_main':
/Users/kagamirudo/002/main/sdcard.c:53:35: error: passing argument 2 of 'esp_vfs_fat_sdspi_mount' from incompatible pointer type [-Wincompatible-pointer-types]
   53 |                                   &slot_config,
      |                                   ^~~~~~~~~~~~
      |                                   |
      |                                   sdspi_device_config_t *
In file included from /Users/kagamirudo/002/main/sdcard.c:7:
/Users/kagamirudo/esp-idf-v5.5.1/components/fatfs/vfs/esp_vfs_fat.h:207:55: note: expected 'const sdmmc_host_t *' but argument is of type 'sdspi_device_config_t *'
  207 |                                   const sdmmc_host_t* host_config_input,
      |                                   ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
/Users/kagamirudo/002/main/sdcard.c:54:35: error: passing argument 3 of 'esp_vfs_fat_sdspi_mount' from incompatible pointer type [-Wincompatible-pointer-types]
   54 |                                   &mount_config,
      |                                   ^~~~~~~~~~~~~
      |                                   |
      |                                   esp_vfs_fat_sdmmc_mount_config_t * {aka esp_vfs_fat_mount_config_t *}
/Users/kagamirudo/esp-idf-v5.5.1/components/fatfs/vfs/esp_vfs_fat.h:208:64: note: expected 'const sdspi_device_config_t *' but argument is of type 'esp_vfs_fat_sdmmc_mount_config_t *' {aka 'esp_vfs_fat_mount_config_t *'}
  208 |                                   const sdspi_device_config_t* slot_config,
      |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
/Users/kagamirudo/002/main/sdcard.c:55:35: error: passing argument 4 of 'esp_vfs_fat_sdspi_mount' from incompatible pointer type [-Wincompatible-pointer-types]
   55 |                                   &card);
      |                                   ^~~~~
      |                                   |
      |                                   sdmmc_card_t **
/Users/kagamirudo/esp-idf-v5.5.1/components/fatfs/vfs/esp_vfs_fat.h:209:69: note: expected 'const esp_vfs_fat_mount_config_t *' but argument is of type 'sdmmc_card_t **'
  209 |                                   const esp_vfs_fat_mount_config_t* mount_config,
      |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~
/Users/kagamirudo/002/main/sdcard.c:52:11: error: too few arguments to function 'esp_vfs_fat_sdspi_mount'
   52 |     ret = esp_vfs_fat_sdspi_mount("/sdcard",
      |           ^~~~~~~~~~~~~~~~~~~~~~~
/Users/kagamirudo/esp-idf-v5.5.1/components/fatfs/vfs/esp_vfs_fat.h:206:11: note: declared here
  206 | esp_err_t esp_vfs_fat_sdspi_mount(const char* base_path,
      |           ^~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/sdcard.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
